--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -4,21 +4,79 @@
     align-items: center;
     justify-content: center;
     background-color: #7dc143;
-    height: 200px;
-    
+    height: 264px;
+
     h1 {
-        font-family: 'Montserrat', Helvetica, sans-serif; 
+        font-family: 'Montserrat', Helvetica, sans-serif;
         font-size: 30px;
         color: #fff;
         margin-bottom: 25px;
     }
 }
-
 .footer {
     display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    background-color: #333;
-    height: 150px;
+    background-color: #2f2e41;
+    color: #fff;
+    height: 447px;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    h1 {
+        margin-bottom: 10px;
+    }
+
+    p {
+        text-align: center;
+        width: 200px;
+    }
+}
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+.text_bottom{
+    display: flex;
+    justify-content: center;
+}
+
+.link_itens {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style: none;
+    text-align: center;
+    li {
+        margin: 5px 0px;
+    }
+
+}
+
+.link_a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px;
+    transition: .4s;
+    border-bottom: 2px solid transparent;
+    &:hover {
+        border-color: #333;
+    }
+}
+
+.link_sociais {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: center;
+    text-align: center;
+    li {
+        margin: 0px 15px;
+    }
+}
