--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -13,14 +13,16 @@
         margin-bottom: 25px;
     }
 }
+
 .footer {
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     background-color: #2f2e41;
     color: #fff;
+    padding-top: 5em;
     height: 447px;
 }
 
@@ -30,7 +32,7 @@
     align-items: center;
     flex-direction: column;
     h1 {
-        margin-bottom: 10px;
+        margin-bottom: 1em;
     }
 
     p {
@@ -38,13 +40,16 @@
         width: 200px;
     }
 }
+
 .break {
     flex-basis: 100%;
     height: 0;
 }
+
 .text_bottom{
     display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 
 .link_itens {
