Tabom por hoje, cansado

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,3 +9,24 @@
   min-height: 50vh;
   background-color: #eee;
 }
+
+.swiper {
+  padding: 32px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #718096
+}
+
+.swiper-button-prev {
+  color: #718096
+}
+
+.swiper-button-next {
+  color: #718096
+}
