--- a/src/styles/Button.module.scss
+++ b/src/styles/Button.module.scss
@@ -14,6 +14,19 @@ $color-main: #d16fff;
     background-color: #fff;
 }
 
+.button_acesse{
+    border: none;
+    text-decoration: none;
+    color: #fff;
+    font-size: 30px;
+    cursor: pointer;
+    border-radius: 20px;
+    width: 200px;
+    height: 50px;
+    background-color: $color-main;
+    margin-bottom: 2em;
+}
+
 .button_cadastrar{
     border-style: solid;
     border-color: $color-main;
