--- a/src/styles/Slide.module.scss
+++ b/src/styles/Slide.module.scss
@@ -1,3 +1,19 @@
 .container {
-    background-color: #333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+
+    h1 {
+        font-size: 60;
+        color: #7dc143;
+        font-weight: 600;
+        margin: 20px 0px;
+    }
+    p {
+        font-size: 30;
+        color: #2f2e41;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
 }
